Segunda entrega del proyecto

--- a/assets/distribuidores.html
+++ b/assets/distribuidores.html
@@ -76,42 +76,39 @@
 
 <!--inicio footer-->
     <footer id="footer">
-        <div class="container-fluid mt-5 w-100 p-4">
-            <div class="row p3 text-white col-md-6">
-                <div class="col-xs-3 col-sm-3 col-md-6 col-lg-3">
+        <div class="container-fluid d-flex justify-content-evenly mt-5 w-100 p-4">
+            <div class="row p3 text-white">
+                <div class="col-xs-4 col-sm-6 col-md-6 col-lg-4">
                     <p class="h5 text-black mb-3">Seguinos</p>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="#">WhatsApp</a>
+                        <a class="text-decoration-none" id="boton" href="https://www.instagram.com/biovanasustentable/">Instagram</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="#">Instagram</a>
-                    </div>
-                    <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="#">Facebook</a>
+                        <a class="text-decoration-none" id="boton" href="https://www.facebook.com/">Facebok</a>
                     </div>
                 </div>  
-                <div class="col-xs-3 col-sm-3 col-md-6 col-lg-3">
+                <div class="col-xs-4 col-sm-6 col-md-6 col-lg-4">
                     <p class="h5 text-black mb-3">Links</p>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="../index.html">Home</a>
+                        <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none" href="tienda.html">Tienda</a>
+                        <a class="text-decoration-none" id="boton" href="nosotros.html">Nosotras</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="nosotros.html">Nosotras</a>
+                        <a class="text-decoration-none" id="boton" href="contactos.html">Contacto</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="contactos.html">Contacto</a>
+                        <a class="text-decoration-none" id="boton" href="distribuidores.html">Distribuidores</a>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+                <div class="col-lg-4">
+                    <iframe class="ubicacion" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
                 </div>
                 <div class="text-black text-center">&#169 BiovanaSustentable2022</div>  
             </div>
-        </div>
+        </div>        
     </footer>
 <!--fin footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
