--- a/assets/nosotros.html
+++ b/assets/nosotros.html
@@ -41,6 +41,7 @@
         </nav>
     <!--fin de nav-->
     <br><br><br><br>
+    <h3 class="text-center">Sobre nosotras!</h3>
     <section class="py-4 mx-5 d-inline-block col-lg-9"  >
     
     <div class="card mb-3 col-sm-12 col-md-12 col-lg-12" id="main-section-div" >
@@ -60,33 +61,30 @@
 
     <!--inicio footer-->
         <footer id="footer">
-            <div class="container-fluid mt-5 w-100 p-4">
+            <div class="container-fluid d-flex justify-content-evenly mt-5 w-100 p-4">
                 <div class="row p3 text-white">
                     <div class="col-xs-12 col-md-6 col-lg-3">
                         <p class="h5 text-black mb-3">Seguinos</p>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="#">WhatsApp</a>
+                        <a class="text-decoration-none" id="boton" href="https://www.instagram.com/biovanasustentable/">Instagram</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="#">Instagram</a>
-                    </div>
-                    <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="#">Facebook</a>
+                        <a class="text-decoration-none" id="boton" href="https://www.facebook.com/">Facebook</a>
                     </div>
                     </div>  
                     <div class="col-xs-12 col-md-6 col-lg-3">
                     <p class="h5 text-black mb-3">Links</p>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="../index.html">Home</a>
+                        <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none" href="tienda.html">Tienda</a>
+                        <a class="text-decoration-none" id="boton" href="tienda.html">Tienda</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="contactos.html">Contacto</a>
+                        <a class="text-decoration-none" id="boton" href="contactos.html">Contacto</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="distribuidores.html">Distribuidores</a>
+                        <a class="text-decoration-none" id="boton" href="distribuidores.html">Distribuidores</a>
                     </div>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-3">
