--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           </div>
           <div class="col-md-4">
             <div class="card-body p-5">
-              <h5 class="card-title">Nuestro proyecto</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure minima corporis quidem reiciendis, ipsam explicabo magni cum facere! Repudiandae, nesciunt! Numquam laboriosam rem vitae ut necessitatibus labore aliquam dolor. Debitis?</p>
+              <h5 class="card-title" id="titulo">Nuestro proyecto</h5>
+              <p class="card-text" id="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure minima corporis quidem reiciendis, ipsam explicabo magni cum facere! Repudiandae, nesciunt! Numquam laboriosam rem vitae ut necessitatibus labore aliquam dolor. Debitis?</p>
             </div>
           </div>
         </div>
@@ -97,8 +97,8 @@
           </div>
           <div class="col-md-4">
             <div class="card-body p-5">
-              <h5 class="card-title">Proceso de producción</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure minima corporis quidem reiciendis, ipsam explicabo magni cum facere! Repudiandae, nesciunt! Numquam laboriosam rem vitae ut necessitatibus labore aliquam dolor. Debitis?</p>
+              <h5 class="card-title" id="titulo">Proceso de producción</h5>
+              <p class="card-text" id="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure minima corporis quidem reiciendis, ipsam explicabo magni cum facere! Repudiandae, nesciunt! Numquam laboriosam rem vitae ut necessitatibus labore aliquam dolor. Debitis?</p>
             </div>
           </div>
         </div>
@@ -107,72 +107,70 @@
 
 <!--fin del main-->
 <!--comienzo aside-->
-  <aside class="aside w-auto p-2 col-lg-6 col-xl-6" id="aside">
-    <div class="card text-center" style="width: 15rem; margin: 10px;"  id="aside-div2">
-      <div class="card-body">
+  <aside class="aside w-auto p-2 col-mb-3 col-sm-12 col-md-12 col-lg-12  " id="aside">
+    <div class="card text-center w-auto col-sm-12 col-md-6 col-lg-6 col-xl-6" style="width: 15em; margin: 10px;" id="aside-div2">
+      <div class="card-body ">
         <h5 class="card-title">Carbon Activado</h5>
-        <a href="#" ><img src="./img/carbon.webp" alt="" style="width: 150px; border-radius:3% "></a>
+        <a href="#" ><img src="./img/carbon.webp" alt="" style="width: 13em; border-radius:3% "></a>
       </div>
-    </div>    
-    <div class="card text-center" style="width: 15rem; margin: 10px;"id="aside-div2">
+    </div> 
+
+    <div class="card text-center w-auto col-sm-12 col-md-6 col-lg-6 col-xl-6" style="width: 15em; margin: 10px;" id="aside-div2">
       <div class="card-body " >
         <h5 class="card-title">Curcuma</h5>
-        <a href="#" ><img src="./img/curcuma.webp" alt="" style="width: 150px; border-radius:3%;"></a>
-      </div>
-    </div>
-    
-    <div class="card text-center" style="width: 15rem; margin: 10px;"  id="aside-div2">
-      <div class="card-body ">
-        <h5 class="card-title">Neutro</h5>
-        <a href="#" ><img src="./img/neutro.webp" alt="" style="width: 150px; border-radius:3%"></a>
+        <a href="#" ><img src="./img/curcuma.webp" alt="" style="width: 13em; border-radius:3%;"></a>
       </div>
     </div>
 
-    <div class="card text-center" style="width: 15rem; margin: 10px;"id="aside-div2">
-      <div class="card-body" >
+    <div class="card text-center w-auto col-sm-12 col-md-6 col-lg-6 col-xl-3" style="width: 15em; margin: 10px;" id="aside-div2">
+      <div class="card-body ">
+        <h5 class="card-title">Neutro</h5>
+        <a href="#" ><img src="./img/neutro.webp" alt="" style="width: 13em; border-radius:3%"></a>
+      </div>
+    </div>
+
+    <div class="card text-center w-auto col-sm-12 col-md-6 col-lg-6 col-xl-3" style="width: 15em; margin: 10px;" id="aside-div2">
+      <div class="card-body " >
         <h5 class="card-title">Lavanda</h5>
-        <a href="#" ><img src="./img/lavanda.webp" alt="" style="width: 150px; border-radius:3%"></a>
+        <a href="#" ><img src="./img/lavanda.webp" alt="" style="width: 13em; border-radius:3%"></a>
       </div>
     </div>
   </aside>
 <!--fin aside-->
 
 <!--inicio footer-->
-    <footer id="footer">
-    <div class="container-fluid mt-5 w-100 p-4">
+  <footer id="footer">
+    <div class="container-fluid d-flex justify-content-evenly mt-5 w-100 p-4">
       <div class="row text-white">
-          <div class="col-xs-3 col-sm-3 col-md-6 col-lg-3">
-            <p class="h5 text-black mb-3">Seguinos</p>
-            <div class="mb-2">
-              <a class="text-black text-decoration-none"href="#">WhatsApp</a>
-            </div>
-            <div class="mb-2">
-              <a class="text-black text-decoration-none"href="#">Instagram</a>
-            </div>
-            <div class="mb-2">
-              <a class="text-black text-decoration-none"href="#">Facebook</a>
-            </div>
-          </div>  
-          <div class="col-xs-3 col-sm-3 col-md-6 col-lg-3">
-            <p class="h5 text-black mb-3">Links</p>
-            <div class="mb-2">
-              <a class="text-black text-decoration-none" href="#">Tienda</a>
-            </div>
-            <div class="mb-2">
-              <a class="text-black text-decoration-none"href="#">Nosotras</a>
-            </div>
-            <div class="mb-2">
-              <a class="text-black text-decoration-none"href="#">Contacto</a>
-            </div>
-            <div class="mb-2">
-              <a class="text-black text-decoration-none"href="#">Distribuidores</a>
-            </div>
+        <div class="col-xs-4 col-sm-6 col-md-6 col-lg-4">
+          <p class="h5 text-black mb-3">Seguinos</p>
+          <div class="mb-2">
+            <a class=" text-decoration-none" id="boton" href="https://www.instagram.com/biovanasustentable/">Instagram</a>
           </div>
-          <div class=" col-lg-3">
-            <iframe class="ubicacion p-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+          <div class="mb-2">
+            <a class="> text-decoration-none" id="boton" href="https://www.facebook.com/">Facebook</a>
           </div>
-          <div class="text-black p-2 col-xs-12 col-md-12 col-lg-12">&#169 BiovanaSustentable2022</div>  
+        </div>  
+        <div class="col-xs-4 col-sm-6 col-md-6 col-lg-4">
+          <p class="h5 text-black mb-3">Links</p>
+          <div class="mb-2">
+            <a class="> text-decoration-none" id="boton" href="./assets/tienda.html">Tienda</a>
+          </div>
+          <div class="mb-2">
+            <a class="> text-decoration-none" id="boton" href="./assets/nosotros.html">Nosotras</a>
+          </div>
+          <div class="mb-2">
+            <a class="text-decoration-none" id="boton" href="./assets/contactos.html">Contacto</a>
+          </div>
+          <div class="mb-2">
+            <a class="text-decoration-none" id="boton" href="./assets/distribuidores.html">Distribuidores</a>
+          </div>
+        </div>
+        <div class=" col-lg-4">
+          <iframe class="ubicacion p-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.534557141162!2d-57.54864128029002!3d-38.03462899908377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584e106254d7dd3%3A0x756f4ce01c231c91!2sBiovana%20Sustentable!5e0!3m2!1ses!2sar!4v1654704600033!5m2!1ses!2sar" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+        <div class="text-black text-center">&#169 BiovanaSustentable2022</div>  
       </div>
     </div>
   </footer>
