--- a/assets/tienda.html
+++ b/assets/tienda.html
@@ -126,40 +126,36 @@
                 <a href="#" class="btn btn-primary">Comprar</a>
             </div>
         </div>
-</main>
+    </main>
+<!--fin de main-->
 
-    <!--fin de main-->
 
-
-    <!--inicio footer-->
-        <footer id="footer">
-            <div class="container-fluid mt-5 w-100 p-4">
-                <div class="row p3 text-white">
-                    <div class="col-xs-12 col-md-6 col-lg-3">
+<!--inicio footer-->
+    <footer id="footer">
+        <div class="container-fluid d-flex justify-content-evenly mt-5 w-100 p-4">
+            <div class="row p3 text-white">
+                <div class="col-xs-12 col-md-6 col-lg-3">
                         <p class="h5 text-black mb-3">Seguinos</p>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="#">WhatsApp</a>
+                        <a class="text-decoration-none" id="boton" href="https://www.instagram.com/biovanasustentable/">Instagram</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="#">Instagram</a>
-                    </div>
-                    <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="#">Facebook</a>
+                        <a class="text-decoration-none" id="boton" href="https://www.facebook.com/">Facebok</a>
                     </div>
                     </div>  
                     <div class="col-xs-12 col-md-6 col-lg-3">
                     <p class="h5 text-black mb-3">Links</p>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none" href="../index.html">Home</a>
+                        <a class="text-decoration-none" id="boton" href="../index.html">Home</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="nosotros.html">Nosotras</a>
+                        <a class="text-decoration-none" id="boton" href="nosotros.html">Nosotras</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="contactos.html">Contacto</a>
+                        <a class="text-decoration-none" id="boton" href="contactos.html">Contacto</a>
                     </div>
                     <div class="mb-2">
-                        <a class="text-black text-decoration-none"href="distribuidores.html">Distribuidores</a>
+                        <a class="text-decoration-none" id="boton" href="distribuidores.html">Distribuidores</a>
                     </div>
                     </div>
                     <div class="col-xs-12 col-md-6 col-lg-3">
