subida con sass

--- a/assets/nosotros.html
+++ b/assets/nosotros.html
@@ -40,24 +40,25 @@
             </div>
         </nav>
     <!--fin de nav-->
-    <br><br><br><br>
-    <h3 class="text-center">Sobre nosotras!</h3>
-    <section class="py-4 mx-5 d-inline-block col-lg-9"  >
-    
-    <div class="card mb-3 col-sm-12 col-md-12 col-lg-12" id="main-section-div" >
-        <div class="row g-0">
-            <div class="col-md-8">
-                <img src="../img/nosotras.webp" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-4">
-                <div class="card-body p-5">
-                    <h5 class="card-title">Nuestro proyecto</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure minima corporis quidem reiciendis, ipsam explicabo magni cum facere! Repudiandae, nesciunt! Numquam laboriosam rem vitae ut necessitatibus labore aliquam dolor. Debitis?</p>
+    <br><br><br><br><br><br>
+    <main id="main-nosotros">
+        <h3 class="text-center">Sobre nosotras!</h3>
+        <section class="py-4 mx-5 d-inline-block col-lg-9"  >    
+            <div class="card mb-3 col-sm-12 col-md-12 col-lg-12" id="main-section-div" >
+                <div class="row g-0">
+                    <div class="col-md-8">
+                        <img src="../img/nosotras.webp" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card-body p-5">
+                            <h5 class="card-title">Nuestro proyecto</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure minima corporis quidem reiciendis, ipsam explicabo magni cum facere! Repudiandae, nesciunt! Numquam laboriosam rem vitae ut necessitatibus labore aliquam dolor. Debitis?</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    </section>
+        </section>
+    </main>
 
     <!--inicio footer-->
         <footer id="footer">
