--- a/assets/contactos.html
+++ b/assets/contactos.html
@@ -43,10 +43,10 @@
 
 <!--inicio main-->
     <br><br><br><br><br><br>
-    <main class="contact-main"> 
+    <main class="main-contact"> 
         <form action="" class="main-div p-5 col-sm-9 col-md-9 col-lg-6">
-            <div>
-                <h3 class="text-center">Contáctese con nosotros</h3>
+            <h3 class="text-center">Contáctese con nosotros</h3>
+            <div class="">
                 <div class="mb-3 ">
                     <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nombre y Apellido">
